[tool.uv]
requires-python = ">=3.10"

[project]
name = "ns_docker_wrapper"
version = "0.1.0"
description = "A Python wrapper for the Nerfstudio Docker image, inspired by ffmpeg-python."
authors = [
    { name = "jourdelune", email = "jourdelune863@gmail.com" }
]
dependencies = [
    "docker",
    "pycolmap>=3.12.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/jourdelune/ns_docker_wrapper"
 